# ma_ipc

./: Cargo.toml
crates/ma_ffi/: Cargo.toml
crates/ma_ffi/include/: queues.h
crates/ma_ffi/src/: lib.rs
crates/ma_ffi_macro/: Cargo.toml
crates/ma_ffi_macro/src/: lib.rs
crates/ma_queues/: Cargo.toml
crates/ma_queues/.cargo/: config  config.toml
crates/ma_queues/benches/: queues.rs  seqlock.rs  versioned_lock.rs
crates/ma_queues/src/: ffi.rs  lib.rs  messages.rs  queue.rs  seqlock.rs  vector.rs  versioned_lock.rs
