[workspace]
resolver = "2"
members = [
"crates/*"
]

[workspace.package]
authors = ["Louis Ponet <louisponet@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
license = "BSD"
repository = "https://github.com/louisponet/ma_ipc"
rust-version = "1.74"
version = "0.1.0"

[workspace.dependencies]
ma_ffi = {path="crates/ma_ffi"}
ma_queues = {path="crates/ma_queues"}

# external dependencies
core_affinity = "^0.8"
criterion = "^0.5"
quanta = "^0.12"
proc-macro2 = "^1.0"
quote = "^1.0"
log = "^0.4"
thiserror = "^1.0"
shared_memory="^0.12"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.bench]
debug = true

[profile.release-with-debug]
inherits="release"
debug=true
