[package]
name = "ma_ffi"
authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ma_ffi_macro = {path = "../ma_ffi_macro/"}
ma_queues = {path = "../ma_queues/", features=["shmem"]}

thiserror.workspace = true
