[package]
name = "ma_queues"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared_memory = {workspace = true, optional = true}

log.workspace = true
thiserror.workspace = true

[dev-dependencies]
ma_time = {path = "../../../ma_timing/crates/ma_time"}
criterion.workspace = true
core_affinity.workspace = true
quanta.workspace = true

[features]
shmem = ["dep:shared_memory"]
default = ["shmem"]

[[bench]]
name = "seqlock"
harness = false

[[bench]]
name = "queues"
harness = false

[[bin]]
name = "queue_verifier"
path = "bin/queue_verifier.rs"
